	  questions (currently, only the exam creator can grant this role).
	  
	* Top menus are hidden once an examination gets selected (in
	  teacher section). New menus bound to selected examination
	  appears in left side instead.
	  
	* Added ability to run the exam in "dry-run" mode (also called
	  test case). This mode works as a real examination, but using
	  a copy of the original examination.
	
Version 1.5.2 (2010-06-02):

	* Added support for sending the examination result by email. The
	  emails are multipart encoded (MIME mail with plain text and HTML
	  sections). 
	  
	* Up to three optional attachments (not counting the result PDF) can
	  be attached to the message.
	  
	* It's now possible to optional append one or more section of text
	  with headers to the email message.
	  
	* The examination grade levels can be defined in any format. The generated 
	  result PDF is automatic assigned a grade based on this information. 
	  The grades are dynamic, so changing the grades will affect score
	  board and result views automatic.
	  
	* Added shared score board class. Both the corrector and decoder
	  page is now rendering the scores using the same data backend class.
	  
	* Questions can now be removed/restored after an examination has
	  taken place. 
	  
	  This is not the same as deleting a question, in that all answer and 
	  comment associated with the question remains in the database. The 
	  question is just marked as ignored.
	
Version 1.5.1 (2010-05-19):

	* Fixed layout of embedded multimedia on question answer page.
	
	* Score board data can now be downloaded in XML format.
	
	* Student codes are now automatic generated if they are missing at
	  registration time.
	
Version 1.5 (2010-05-18):

	* Result from examination can now be exported as PDF/PS/HTML or generated
	  as batch jobs using admin/result.pdf. If multiple examinations is
	  exported, then caller receives them in a zip-file.
	  